# KK_ScreenshotManagerReshadeOutpuit

./: .gitignore  README.md  README.zh-CN.md
Native/OfflineDepthD3D11Bridge/: CMakeLists.txt  bridge.cpp
VideoExportPatch/: README.md  videoexport-normal-depth.patch
src/Core_Screencap/: ScreenshotManager.cs
src/Core_Screencap_KKEC/: Core_Screencap.projitems  ScreenshotManager.KKEC.cs  ScreenshotManager.OfflineExport.cs
